--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
     --color-background: #F0F0F7;
     --color-primary-lighter: #9871F5;
     --color-primary-light: #916BEA;
-    --color-primary: #8257E5;
+    --color-primary: #f06e04;
     --color-primary-dark: #774DD6;
     --color-primary-darker: #6842c2;
     --color-secondary: #04D361;
@@ -12,8 +12,8 @@
     --color-title-in-primary: #FFFFFF;
     --color-text-in-primary: #D4C2FF;
     --color-text-title: #32264D;
-    --color-text-complement: #9C98A6;
-    --color-text-base: #ca8c18;
+    --color-text-complement: #9c98a6;
+    --color-text-base: #9c98ac;
     --color-line-in-white: #E6E6F0;
     --color-input-background: #F8F8FC;
     --color-button-text: #FFFFFF;
@@ -33,13 +33,13 @@ body {
 }
 
 #cover {
-    margin: 100px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    margin: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     padding-left: 15px;
     padding-right: 15px;
-    width: 200px; /*width (px) é fixo*/
-    height: 100px; /*height (px) é fixo*/
+    width: 100x; /*width (px) é fixo*/
+    height: 200px; /*height (px) é fixo*/
 }
 
 html, body {
@@ -67,11 +67,10 @@ button {
 }
 
 #cover {
-    width: 100vw;
+    width: 90vw;
     max-width: 700px;
-    border: 1px solid green;
-    height: 200vh;
-    max-height: 100px;
+    /* height: 200vh; */
+    /* max-height: 100px; */
 }
 
 
