--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,11 +1,135 @@
-:root {
-    font-size: 40%;
-}
-
 #page-landing {
     background: var(--color-primary);
 }
 
-#page-landing #container {
+#page-landing #cover {
     color: var(-color-text-in-primary);
+}
+
+.logo-cover img {
+    height: 10rem;
+}
+
+.logo-cover h2 {
+    font-weight: 500;
+    font-size: 2.5rem;
+    line-height: 2.9rem;
+    margin-top: 0.8rem;
+    color: var(--color-text-in-primary);
+}
+
+.logo-cover {
+    text-align: left;
+    margin-bottom: 3.2rem;
+}
+
+.hero-image {
+    width: 100%;
+}
+
+.buttons-cover {
+    display: flex;
+    justify-content: center;
+    margin: 1.5rem 0;
+}
+
+.buttons-cover a {
+    width: 22rem;
+    height: 10rem;
+
+    border-radius: 1.5rem;
+    margin-right: 1.6rem;
+
+    font: 700 2.4rem Archivo;
+    text-decoration: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: var(--color-button-text);
+    transition: background 0.3s;
+}
+
+.buttons-cover img {
+    width: 4rem;
+    margin-right: 2.4rem;
+}
+
+.buttons-cover a.study {
+    background: var(--color-primary-lighter);
+}
+
+.buttons-cover a.study:hover {
+    background: var(--color-primary-darker);
+}
+
+.buttons-cover a.teach {
+    background: var(--color-secondary-lighter);
+    margin-right: 0rem;
+}
+
+.buttons-cover a.teach:hover {
+    background: var(--color-secondary-darker);
+}
+
+.total-connections {
+    font-size: 1.8rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.total-connections img{
+    margin-left: 0.8rem;
+    font=
+}
+
+@media (max-width: 699px) {
+    :root {
+        font-size: 40%;
+    }
+}
+
+@media (min-width: 1100px) {
+    #page-landing #cover {
+        max-width: 1100px;
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 300px 1fr;
+        grid-template-areas: 
+        "eStuddy img img"
+        "button button texting";
+        column-gap: 87px;
+        row-gap: 40px;
+    }
+    .logo-cover {
+        grid-area: eStuddy;
+        text-align: initial;
+        align-self: center;
+        margin: 0;
+    }
+
+    .logo-cover img {
+        height: 127px;
+    }
+    
+    .hero-image {
+        grid-area: img;
+        height: 350px;
+    }
+
+    .buttons-cover {
+        grid-area: button;
+        justify-content: flex-start;
+        margin: 0;
+    }
+
+    .total-connections {
+        grid-area: texting;
+        justify-self: end;
+        font-size: 1.2rem;
+    }
+
 }
