Segunda página do site e CSS do mesmo

--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,7 @@ html, body {
 }
 
 body, input, textarea {
-    /* font: 500 1.6rem Poppins; é possível agrupar as caracterísicas em uma linha*/
+    /* font: 500 1.6rem Poppins; é possível agrupar as características em uma linha*/
     font-weight: 500;
     font-family: Poppins;
     font-size: 1.5rem;
