--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -99,13 +99,13 @@
         grid-template-columns: 2fr 1fr 2fr;
         grid-template-rows: 300px 1fr;
         grid-template-areas: 
-        "eStuddy img img"
+        "logo img img"
         "button button texting";
         column-gap: 87px;
         row-gap: 40px;
     }
     .logo-cover {
-        grid-area: eStuddy;
+        grid-area: logo;
         text-align: initial;
         align-self: center;
         margin: 0;
